Villanova_Dev1/src/objects/Survey_Response__c.object
<CustomObject>
    <description>A place to store information collected via survey tools.</description>
    <fields>
        <fullName>Case_Competition_Judge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Competition Judge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Expert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Country Expert on Brazil, Russia, India or China for Introductory Leadership Course</description>
        <label>Country Expert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guest_Speaker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Guest Speaker for a Specific Courses</description>
        <label>Guest Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mentor_Coach__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mentor/Coach</description>
        <label>Mentor/Coach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professional_Development_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Professional Development Events (i.e. career panels, workshops and networking opportunities)</description>
        <label>Professional Development Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resume_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Resume Review &amp; Assistance</description>
        <label>Resume Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject_Area_Tutor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Subject Area Tutor</description>
        <label>Subject Area Tutor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this individual interested in participating in MBA program initiatives?</description>
        <label>Volunteer Interest</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Response</label>
    <nameField>
        <label>Survey Responses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>